tools/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing/syncthing:2.1.0
          ports:
            - containerPort: 8384
            - containerPort: 22000
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /var/syncthing/config
            - name: data
              mountPath: /var/syncthing/data
      volumes:
        - name: config
          hostPath:
            path: /home/server/syncthing/config
        - name: data
          hostPath:
            path: /home/server/syncthing/data
        - name: config-template
          configMap:
            name: syncthing-config
